--- a/cgp/signup.html
+++ b/cgp/signup.html
@@ -3,11 +3,9 @@
 <head>
 	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
-  <link rel="stylesheet" href="http://127.0.0.1:8887/cgp/css/styles.css">
-  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8887/cgp/css/hstyles.css">
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/vishwa5854/resources/master/cgp/css/hstyles.css">
     <title></title>
     <script>
         let send = async () => {
@@ -60,7 +58,7 @@
 	</div>
 </nav>
 <div class="login">
-	<img src="http://127.0.0.1:8887/cgp/css/buslogo.svg" class="logo">
+	<img src="https://raw.githubusercontent.com/vishwa5854/resources/master/cgp/css/buslogo.svg" class="logo">
 	<div id="email">
 	<input class="input email" id = "ema" type="text" name="email" placeholder="Email" size="30px">
     </div>
